common/istio-1-11/kubeflow-istio-resources/base/kf-istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https 
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-cert
    hosts:
    - "kubeflow.panoptes.uk"
